--- a/references.bib
+++ b/references.bib
@@ -87,3 +87,31 @@
   year={2020},
   publisher={Lulu. com}
 }
+@book{hyndman2018forecasting,
+  title={Forecasting: principles and practice},
+  author={Hyndman, Rob J and Athanasopoulos, George},
+  year={2018},
+  publisher={OTexts}
+}
+@article{assimakopoulos2000theta,
+  title={The theta model: a decomposition approach to forecasting},
+  author={Assimakopoulos, Vassilis and Nikolopoulos, Konstantinos},
+  journal={International journal of forecasting},
+  volume={16},
+  number={4},
+  pages={521--530},
+  year={2000},
+  publisher={Elsevier}
+}
+@book{szeliski2022computer,
+  title={Computer vision: algorithms and applications},
+  author={Szeliski, Richard},
+  year={2022},
+  publisher={Springer Nature}
+}
+@article{dragulescu2002statistical,
+  title={Statistical mechanics of money, income, and wealth: a short survey},
+  author={Dragulescu, Adrian A and Yakovenko, Victor M},
+  journal={arXiv preprint cond-mat/0211175},
+  year={2002}
+}
