--- a/06-ts.qmd
+++ b/06-ts.qmd
@@ -1,9 +1,11 @@
 ---
 title: Time Series Analysis
 jupyter: python3
+execute:
+  cache: true
 ---
 
-# Exploring Time Series Data
+## Exploring Time Series Data
 
 One of the first things that we do when we are given a time series is visualise
 it. The visualisation is meant to give us an indication of what kinds of
@@ -42,7 +44,9 @@ import matplotlib.pyplot as plt
 import seaborn as sns
 ```
 
+::: {#exm-housing-1 style="background-color: #D5D1D164; padding: 20px"}
 ### Example: Basic Plots of Housing Data
+\index{Housing Sales!Basic Plots}
 
 ```{python}
 hsales = pd.read_csv('data/hsales.csv', parse_dates=[0])
@@ -58,6 +62,8 @@ this period. With pandas objects, we can resample the series. This allows us to
 compute summaries over time windows that could be of business importance. For
 instance, we might be interested in a breakdown by quarters instead of months. 
 
+:::
+
 With the `resample()` function, we can perform both downsampling (reducing the
 frequency of observations) or upsampling (via interpolation or nearest
 neighbour imputation).
@@ -69,17 +75,22 @@ hsales.resample('14D').interpolate().head()
 
 ::: {.callout-note}
 
-See the <a href="https://pandas.pydata.org/docs/user_guide/timeseries.html#dateoffset-objects">page</a>
+See the [page](https://pandas.pydata.org/docs/user_guide/timeseries.html#dateoffset-objects)
 on date-offset objects for details and options on the strings that you can put
 within the resample method. 
 
 :::
+
+::: {#exm-housing-2 style="background-color: #D5D1D164; padding: 20px"}
+### Example: Season Plots of Housing Data
+\index{Housing Sales!Season Plot}
 
 A season plot allows us to visualise what happens within a season. In this
 case, each line in the graph below traces the behaviour of the series from the
 beginning of the season till the end (from Jan to Dec).
 
 ```{python}
+#| fig-align: center
 hsales.loc[:, 'year'] = hsales.index.year
 hsales.loc[:, 'month'] = hsales.index.month
 
@@ -97,10 +108,14 @@ plt.title('Season Plot: House Sales')
 plt.xlim(0, 13)
 plt.xticks(np.arange(1, 13), calendar.month_abbr[1:13]);
 ```
+:::
 
+::: {#exm-aus-elec-1 style="background-color: #D5D1D164; padding: 20px"}
 ### Example: Basic Time Plot, Australian Quarterly Electricity Production
+\index{Australian QEC!Basic Plots}
 
 ```{python}
+#| fig-align: center
 qau = pd.read_csv('data/qauselec.csv', parse_dates=[0])
 qau.set_index('date', inplace=True)
 qau.index.freq = 'QS'
@@ -127,6 +142,7 @@ qau2.loc[:, 'qtr'] = qau2.index.quarter
 ```
 
 ```{python}
+#| fig-align: center
 yrs = np.sort(qau2.year.unique())
 color_ids = np.linspace(0, 1, num=len(yrs))
 colors_to_use = plt.cm.YlOrRd(color_ids)
@@ -141,6 +157,10 @@ plt.title('Season Plot: House Sales')
 plt.xlim(0, 5)
 plt.xticks(np.arange(1, 5), ['Q1', 'Q2', 'Q3', 'Q4']);
 ```
+
+:::
+
+<br/>
 
 Most time series models are autoregressive in nature. This means that they
 attempt to predict future observations based on previous ones. The observations
@@ -159,9 +179,12 @@ visually assess if the observations that are $k$ units of time apart are
 associated with one another. We typically plot several lags at once to observe
 this relationship.
 
+::: {#exm-housing-3 style="background-color: #D5D1D164; padding: 20px"}
 ### Example: Lag plots of Housing Sales Data
+\index{Housing Sales!Lag Plots}
 
 ```{python}
+#| fig-align: center
 f, aa = plt.subplots(nrows=3,ncols=4, sharex=True, sharey=True)
 f.set_figheight(10)
 f.set_figwidth(12)
@@ -175,7 +198,9 @@ for i in np.arange(0, 3):
 f.suptitle('Lag plots');
 ```
 
-# Decomposing Time Series Data
+:::
+
+## Decomposing Time Series Data
 
 In this section, our goal is still primarily exploratory, but it will also
 return information that we can use to model our data later on. We aim to break
@@ -215,21 +240,35 @@ Let us denote this estimate as $\hat{S}_t$.
 4. Estimate the remainder component. For instance, in the additive model, it would be 
 $\hat{R}_t = y_t - \hat{T}_t - \hat{S}_t$.
 
+::: {#exm-housing-3 style="background-color: #D5D1D164; padding: 20px"}
 ### Example: Additive Decomposition, Housing Sales
+\index{Housing Sales!Additive Decomposition}
 
 Here is the naive additive decomposition of the housing sales data.
 
 ```{python}
-hsales_add = seasonal_decompose(hsales.loc[:, 'hsales'], model='additive', extrapolate_trend='freq')
+#| fig-align: center
+hsales_add = seasonal_decompose(hsales.loc[:, 'hsales'], 
+                                model='additive', extrapolate_trend='freq')
 hsales_add.plot();
 ```
 
+:::
+
+::: {#exm-aus-elec-2 style="background-color: #D5D1D164; padding: 20px"}
 ### Example: Multiplicative Decomposition, Aus Electricity Data
+\index{Australian QEC!Multiplicative Decomposition}
+
+Here is the *multiplicative decomposition for the Australian electric data.
 
 ```{python}
-qau_mult = seasonal_decompose(qau.loc[:, 'kWh'], model='multiplicative', extrapolate_trend='freq')
+#| fig-align: center
+qau_mult = seasonal_decompose(qau.loc[:, 'kWh'], model='multiplicative',
+                              extrapolate_trend='freq')
 qau_mult.plot();
 ```
+
+:::
 
 As you may have noticed, there are some issues with the classical seasonal decomposition algorithms. These include:
 
@@ -237,21 +276,26 @@ As you may have noticed, there are some issues with the classical seasonal decom
 * an inability to account for changing seasonal components.
 * it is not robust to outliers.
 
+::: {#exm-aus-elec-3 style="background-color: #D5D1D164; padding: 20px"}
+### Example: STL decomposition, Aus Electricity
+\index{Australian QEC!STL Decomposition}
+
 Newer algorithms such as STL decomposition, X11 and others attempt to address
 these issues. They use locally weighted regression models to obtain the trend.
 These algorithms iterate over the time series several times, so as to ensure
 that outliers are not affecting the outcome.
 
-### Example: STL decomposition, Aus Electricity
-
 ```{python}
+#| fig-align: center
 qau_stl = STL(qau.kWh).fit()
 qau_stl.plot();
 ```
 
-# Forecasting
+:::
 
-## Benchmark methods
+## Forecasting
+
+### Benchmark methods
 
 As in all forecasting methods, it is useful to obtain a baseline forecast
 before proceeding to more sophisticated techniques. Baseline forecasts are
@@ -269,13 +313,18 @@ B. The naive forecast:
 
 C. The seasonal naive forecast.
 
+::: {#exm-housing-4 style="background-color: #D5D1D164; padding: 20px"}
+### Example: Benchmark Forecasts Housing Sales
+\index{Housing Sales!Benchmark Forecasts}
+
 Suppose we apply some of the above forecasts to the housing sales dataset. We
 withhold the most recent 2 years of data and foreacst those. Here is a plot
 depicting the forecasts, and the true values.
 
-### Example: Benchmark Forecasts Housing Sales
 
 ```{python}
+#| fig-align: center
+
 # Set aside the last two years as the test set.
 #hsales = hsales.drop(columns=['year', 'month'])
 train_set = hsales.iloc[:-24,]
@@ -292,6 +341,8 @@ mean_forecast.plot(ax=ax, legend=True, style='-')
 snaive_forecast.plot(ax=ax, legend=False, style='-')
 plt.legend(labels=['train', 'test', 'mean', 'snaive'], loc='lower right');
 ```
+
+:::
 
 When assessing forecasts, there are a few different metrics that are typically
 applied. Each of them has it's own set of pros and cons. If we denote the
@@ -332,29 +383,39 @@ for x in [ts.rmse, ts.mae]:
 The MASE for the seasonal naive forecast is as follows.
 
 ```{python}
-ts.mase(test_set.hsales.values,  snaive_forecast.values, train_set.values, seasonality=12)
+ts.mase(test_set.hsales.values,  snaive_forecast.values, train_set.values, 
+        seasonality=12)
 ```
 
-In our simple example, the seasonal naive model outperforms the simple mean forecast according to all the metrics but in general, things are not always this clear-cut.
+In our simple example, the seasonal naive model outperforms the simple mean
+forecast according to all the metrics but in general, things are not always this
+clear-cut.
 
 ## ARIMA Models
 
-Now let us turn to a huge class of models that have been utilised in time
-series forecasting since the 1960's. They are known as ARIMA models. ARIMA
-stands for AutoRegressive Integrated Moving Average models. These models are
-appropriate for **stationary** processes. Stationarity is a technical term that
-refers to processes 
+Now let us turn to a huge class of models that have been utilised in time series
+forecasting since the 1960's. They are known as ARIMA models. ARIMA stands for
+AutoRegressive Integrated Moving Average models. These models are appropriate
+for **stationary** processes. Stationarity is a technical term that refers to
+processes
 
-* that have a constant mean. This means that the process merely fluctuates about a fixed level over time.
-* whose covariance function does not change over time. This means that, for a fixed $h$, the covariance between $y_t$ 
-  and $y_{t+h}$ is the same for all $t$.
+* that have a constant mean. This means that the process merely fluctuates about 
+  a fixed level over time.
+* whose covariance function does not change over time. This means that, for a 
+  fixed $h$, the covariance between $y_t$ and $y_{t+h}$ is the same for all $t$.
 * whose variance is constant over time.
 
-How can we tell if a process is stationary or not? The following time series is not stationary. Why?
+How can we tell if a process is stationary or not? The following time series is
+not stationary. Why?
 
+::: {#exm-dow-1 style="background-color: #D5D1D164; padding: 20px"}
 ### Example: Dow Jones Index
+\index{Dow Jones!Differencing}
+
+Consider the following time series of the Dow Jones index.
 
 ```{python}
+#| fig-align: center
 dj = pd.read_csv('data/dj.csv')
 dj.plot(legend=False, title='Dow Jones Index', figsize=(15,4));
 ```
@@ -365,9 +426,11 @@ However, the following differenced version of the same series is:
 \end{equation}
 
 ```{python}
+#| fig-align: center
 ddj = diff(dj)
 ddj.plot(legend=False, title='Differenced Dow Jones', figsize=(15,4));
 ```
+:::
 
 ARIMA models revolve around the idea that if we have a non-stationary series,
 we can transform it into a stationary one with a suitable number of
@@ -378,6 +441,7 @@ stationary process should "die down" quickly. Here is the ACF of the Dow Jones
 data, before and after differencing.
 
 ```{python}
+#| fig-align: center
 plt.subplot(211)
 plt.stem(acf(dj, fft=False))
 plt.title("Non-differenced")
@@ -405,8 +469,9 @@ inspecting the ACF, PACF, and time plots of the differenced series. Today, we
 can iterate through a large number of them and pick the best according to a
 well-established criteria (AIC).
 
-
+::: {#exm-aus-elec-4 style="background-color: #D5D1D164; padding: 20px"}
 ### Example: Auto ARIMA on Aus Electricity
+\index{Australian QEC!Auto ARIMA}
 
 Let us try out the ARIMA auto-fitting algorithm on the qau electricity usage
 dataset. We shall set aside the last three years of data as the test set.
@@ -424,10 +489,20 @@ print(f"The RMSE is approximately {ts.rmse(test2.values, snaive_f.values):.3f}."
 Let us see if the automatically fitted ARIMA models can do better than this.
 
 ```{python}
-arima_m1 = pm.auto_arima(train2.values, seasonal=True, m=4, test='adf', trace=True)
+#| include: false
+#| echo: true
+arima_m1 = pm.auto_arima(train2.values, seasonal=True, m=4, test='adf', 
+                         trace=False, suppress_warnings=True)
+```
 
+Here is the summary of the final chosen model.
+
+```{python}
+#arima_m1 = pm.auto_arima(train2.values, seasonal=True, m=4, test='adf', 
+#                         trace=False, suppress_warnings=True)
 arima_m1.summary()
 ```
+:::
 
 Once we have found the best-fitting model, we do what we do with any other
 model in data analytics: we have to inspect the residuals. The residuals should
@@ -443,6 +518,7 @@ The final plot, in the bottom right, displays an ACF with no spikes, indicating
 that the residuals are uncorrelated. This is precisely what we wished to see.
 
 ```{python}
+#| fig-align: center
 arima_m1.plot_diagnostics(figsize=(12,6));
 ```
 
@@ -457,15 +533,14 @@ print(f"The MASE on the test set is {ts.mase(test2.values, arima_m1.predict(n_pe
 Let us proceed to make a plot of the predictions.
 
 ```{python}
+#| fig-align: center
 n_periods = 12
 fc, confint = arima_m1.predict(n_periods=n_periods, return_conf_int=True)
 
 ff = pd.Series(fc, index=test2.index)
 lower_series = pd.Series(confint[:, 0], index=test2.index)
 upper_series = pd.Series(confint[:, 1], index=test2.index)
-```
 
-```{python}
 plt.figure(figsize=(14, 5))
 plt.plot(train2[-36:])
 plt.plot(ff, color='red', label='Forecast')
@@ -506,7 +581,6 @@ requiring the assumption of stationarity!
 Here is a full table of the additive models, followed by the multiplicative
 models:
 
-
 ::: {layout-ncol=1}
 
 ![](figs/ets_add.png){width=70%}
@@ -517,7 +591,9 @@ models:
 
 
 
+::: {#exm-aus-elec-5 style="background-color: #D5D1D164; padding: 20px"}
 ### Example: ETS model on Aus Electricity Dataset 
+\index{Australian QEC!ETS Model}
 
 Let us try one of the basic models, with just a slope, level and seasonal
 effect ETS(A,A,A), on the qau dataset.
@@ -532,6 +608,7 @@ ets_fit.summary()
 ```
 
 ```{python}
+#| fig-align: center
 plt.subplot(211)
 plt.plot(train2.index, ets_fit.trend, scaley=False)
 plt.ylim(0.245, 0.255)
@@ -553,20 +630,25 @@ ets_fc = ets_fit.forecast(steps=12)
 print(f"The RMSE on th tests set is {ts.rmse(test2.values, ets_fc):.3f}.")
 ```
 
+:::
+
 ## Theta Method
 
 The Theta method is a forecasting approach that has proved to be quite
 effective in competitions. It regularly appears as one of the best-performing
 models.  Instead of decomposing a time series into Trend, Season and Remainder
 terms, the theta method decomposes a *seasonally adjusted* time series into
-**short-** and **long-term** components.
+**short-** and **long-term** components. The full reference for this method is
+@assimakopoulos2000theta.
 
 Suppose we are interested in forecasting a time series $\{y_t\}$. The theta
 decomposition is based on the concept of amplifying/diminishing the local
 curvatures of the time series. This is brought about through a coefficient
 $\theta$; hence the name of the model.
 
-As a preview, we are going to find series $\{ x_{\theta,t}\}$ and $\{ x_{1 - \theta,t}\}$ such that 
+As a preview, we are going to find series $\{ x_{\theta,t}\}$ and 
+$\{ x_{1 - \theta,t}\}$ such that
+
 $$
 y_t = \frac{1}{2}(x_{\theta,t} + x_{1 - \theta,t})
 $$
@@ -585,18 +667,19 @@ to Singapore at the monthly level. Here is a time series plot of arrivals from
 South East Asian Countries:
 
 ```{python}
-tourism = pd.read_excel("data/international_visitor_arrivals_sg.xlsx", parse_dates=[0], date_format="%Y %b", 
-                       na_values='na')
+#| fig-align: center
+tourism = pd.read_excel("data/international_visitor_arrivals_sg.xlsx", 
+                        parse_dates=[0], date_format="%Y %b", 
+                        na_values='na')
 sea_tourism = tourism.iloc[:, 0:9]
-sea_tourism.columns = ['Date', 'SEA', 'Brunei', 'Indonesia' ,'Malaysia', 'Myanmar', 'Philippines', 'Thailand', 'Vietnam']
+sea_tourism.columns = ['Date', 'SEA', 'Brunei', 'Indonesia' ,'Malaysia', 
+                       'Myanmar', 'Philippines', 'Thailand', 'Vietnam']
 sea_tourism.Date = sea_tourism.Date.str.replace('  ', '')
 sea_tourism.Date = pd.to_datetime(sea_tourism.Date, format="%Y %b")
 sea_tourism.set_index('Date', inplace=True)
 sea_tourism.sort_index(inplace=True)
 sea_tourism.index.freq = 'MS'
-```
 
-```{python}
 sea2 = sea_tourism.SEA[sea_tourism.index < datetime.datetime(2020, 1, 1)]
 fig = sea2.plot(figsize=(12,4));
 fig.set_title('Monthly Arrivals from SEA Countries before COVID-19');
@@ -638,7 +721,9 @@ yvals2 = pd.Series(data=yvals2, index=sea2.index)
 ```
 
 ```{python}
-fig = (sea2_mult.resid + sea2_mult.trend).plot(label='Seasonally adjusted', legend=True, figsize=(12,4));
+#| fig-align: center
+fig = (sea2_mult.resid + sea2_mult.trend).plot(label='Seasonally adjusted', 
+                                               legend=True, figsize=(12,4));
 yvals1.plot(legend=True, label='Long-term trend', style="--")
 yvals2.plot(legend=True, label='Short-term trend', style="--");
 fig.set_title("Theta decomposition");
@@ -656,6 +741,7 @@ theta_forecasts = pd.DataFrame(
 ```
 
 ```{python}
+#| fig-align: center
 theta_forecasts.tail(360).plot(figsize=(12,4));
 ```
 
@@ -685,16 +771,21 @@ forecasts2 = pd.DataFrame(
 ```
 
 ```{python}
+#| fig-align: center
 forecasts2.tail(360).plot(figsize=(12,4));
 ```
 
-# Miscellaneous Topics
+## Miscellaneous Topics
 
-## Time Series Clustering
+### Time Series Clustering
 
+::: {#exm-us-emp-1 style="background-color: #D5D1D164; padding: 20px"}
 ### Example: Time Series Clustering, US Employment Data
+\index{US Employment!Clustering}
 
-The [Forecasting: Principles and Practice](https://otexts.com/fpp3/) contains time series data on employment in various sectors in the US. There are 148 unique series in the dataset.
+The [Forecasting: Principles and Practice](https://otexts.com/fpp3/) contains
+time series data on employment in various sectors in the US. There are 148
+unique series in the dataset.
 
 ```{python}
 us_employment = pd.read_csv("data/us_employment.csv", parse_dates=[0], date_format="%Y %b")
@@ -709,10 +800,14 @@ us_employment.sample(n=8)
 Here is a plot of one of the time series in the dataset.
 
 ```{python}
-us_employment[us_employment.Title == "Total Private"].plot(x='Month', y='Employed', figsize=(12,4));
+#| fig-align: center
+us_employment[us_employment.Title == "Total Private"].plot(x='Month', 
+                                                           y='Employed', 
+                                                           figsize=(12,4));
 ```
 
-Since we are going to perform clustering on the time series data, our first step is to remove the missing values.
+Since we are going to perform clustering on the time series data, our first step
+is to remove the missing values.
 
 ```{python}
 us_full = us_employment[(us_employment.Month >= datetime.datetime(2002, 9, 30)) & (us_employment.Month < datetime.datetime(2018, 1, 1) )   ]
@@ -725,14 +820,12 @@ Now we can begin the clustering procedure.
 ```{python}
 # This already converts the correlation into a distance (see the help page)
 out = pdist(us2_array, metric='correlation')
-```
-
-```{python}
 #corr_mat = np.corrcoef(X, rowvar=False)
 #dist_mat = (1 - corr_mat)/2
 ```
 
 ```{python}
+#| fig-align: center
 lm1 = hierarchy.linkage(out, method='average', optimal_ordering=True)
 
 plt.figure(figsize=(12,5))
@@ -742,12 +835,16 @@ hierarchy.dendrogram(lm1, p=3, truncate_mode='level',color_threshold=True);
 We reorder the columns and rows in the matrix so that similar time series appear next to one another.
 
 ```{python}
+#| fig-align: center
 X_ord = us2_array[hierarchy.leaves_list(lm1)]
 corr_mat_ord = np.corrcoef(X_ord)
 #corr_mat_ord.shape
 plt.figure(figsize=(15, 15))
-sns.heatmap(corr_mat_ord, vmin=-1, vmax=1, cmap='coolwarm_r', center=0);#, annot=True, cmap='coolwarm', center=0)
+sns.heatmap(corr_mat_ord, vmin=-1, vmax=1, cmap='coolwarm_r', center=0);
+#, annot=True, cmap='coolwarm', center=0)
 ```
+
+:::
 
 In the next few plots, we pick out series that are close to one another in blue
 segments of the matrix above to inspect how similar they are, and in what ways
@@ -762,22 +859,18 @@ us2_series = us2.index.to_list()
 # ss = [us2_series[x] for x in [22, 24, 32, 33, 34]]
 ss = [us2_series[x] for x in [143, 144, 145]]
 us2.T.loc[:, ss].plot(figsize=(12,4));
-```
 
-```{python}
 # Similar series set 2
-ss = us2_series[65:68]
-us2.T.loc[:, ss].plot(logy=False, figsize=(12,4)); # try with and without log
-```
+#ss = us2_series[65:68]
+#us2.T.loc[:, ss].plot(logy=False, figsize=(12,4)); # try with and without log
 
-```{python}
 # Simular series set 3:
 
-ss = [us2_series[x] for x in [92, 94, 96, 97, 98]]
-us2.T.loc[:, ss].plot(logy=False, figsize=(12,4));
+#ss = [us2_series[x] for x in [92, 94, 96, 97, 98]]
+#us2.T.loc[:, ss].plot(logy=False, figsize=(12,4));
 ```
 
-# Summary 
+## Summary 
 
 We have briefly covered the following time series concepts: Exploratory data
 analysis, assessing point forecasts and a few commonly used models. To finish
@@ -785,8 +878,6 @@ up the section, we also applied clustering to time series. With today's code,
 the model-fitting routines are easier to run. As always, the onus is on us as
 analysts to inspect the residuals from the models to understand the time series
 we are working with.
-
-# References
 
 ## References
 
@@ -797,6 +888,8 @@ we are working with.
 
 ### Forecasting principles and practice
 
-Although the code for this textboook uses R, the concepts are very well explained. It is written by one of the foremost experts in time series forecasting methods.
+Although the code for this textboook uses R, the concepts are very well
+explained. It is written by one of the foremost experts in time series
+forecasting methods. The reference is @hyndman2018forecasting.
 
 * [Forecasting: Principles and Practice](https://otexts.com/fpp3/)
